erDiagram
    USERS ||--o{ GARDENS : owns
    USERS ||--o{ ACHIEVEMENTS : earns
    GARDENS ||--o{ PLANT_INSTANCES : contains
    GARDENS ||--o{ WEATHER_EVENTS : experiences
    PLANTS ||--o{ PLANT_INSTANCES : defines
    PLANT_INSTANCES ||--o{ TASKS : generates
    GARDENS }o--|| PLANTS : "garden_plants (M:N)"

    USERS {
        int id PK
        string username UK
        string email UK
        timestamp created_at
    }

    GARDENS {
        int id PK
        int user_id FK
        string name
        int width_cells
        int height_cells
        timestamp created_at
    }

    PLANTS {
        int id PK
        string name
        string first_name
        string last_name
        string species
        int growth_days
        string climate_type
        string icon_key
    }

    PLANT_INSTANCES {
        int id PK
        int garden_id FK
        int plant_id FK
        int cell_x
        int cell_y
        date planted_at
        int growth_stage
        boolean is_watered
        boolean is_fertilized
    }

    TASKS {
        int id PK
        int plant_instance_id FK
        string task_type
        timestamp due_at
        boolean is_done
    }

    WEATHER_EVENTS {
        int id PK
        int garden_id FK
        string event_type
        int intensity
        timestamp occurred_at
    }

    ACHIEVEMENTS {
        int id PK
        int user_id FK
        string title
        string condition_key
        timestamp earned_at
    }

    GARDEN_PLANTS {
        int garden_id FK
        int plant_id FK
        timestamp added_at
    }
